--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
-p {}
+table.graph-analysis-table, table.graph-analysis-table tr, table.graph-analysis-table td {
+    border: 1px solid black;
+}
+
+table.graph-analysis-table td {
+    padding: 2px;
+}
