feat: :sparkles: Co-Citations backlinks pane!

--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@ table.graph-analysis-table td {
 }
 
 
-td.internal-link {
+td.internal-link, span.internal-link {
   color: var(--text-accent);
   text-decoration-line: none !important;
 }
 
-td.internal-link:hover {
+td.internal-link:hover, span.internal-link:hover {
   color: var(--text-accent-hover, var(--text-accent));
 }
 
