feat: :sparkles: Scrollbar + Individual components

--- a/styles.css
+++ b/styles.css
@@ -74,9 +74,20 @@ body.is-mobile .GA-details::before {
 
 .GA-View ::-webkit-scrollbar {
   width: 1em;
-  height: 4px;
+  height: 0px;
   border-radius: 10px;
   background-color: var(--scrollbar-bg);
+}
+
+.scrollContainer {
+  padding: 0px 0px 4px 0px;
+}
+.scrollContainer:hover {
+  padding: 0px;
+}
+
+.GA-View .scrollContainer:hover ::-webkit-scrollbar {
+  height: 4px;
 }
 
 .GA-View ::-webkit-scrollbar-track {
